--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- <div class="profile-pic"></div> -->
      <!-- <img src="" alt="野田 大輔"> -->
   <p class="message_description">
-    ホームページをご覧いただき、ありがとうございます。<br>私たちは「まじめに、ていねいに」を合言葉に、電気設備における外構工事の現場を一つひとつ丁寧に仕上げることを大切にしており、ありがたいことに多くのお客様から「またお願いしたい」というお声をいただいております。これからも、お客様との信頼関係を第一に、安心して任せていただけるパートナーを目指してまいります。<br>小さなご相談でもお気軽にご連絡ください。
+    ホームページをご覧いただき、ありがとうございます。私たちは「まじめに、ていねいに」を合言葉に、電気設備における外構工事の現場を一つひとつ丁寧に仕上げることを大切にしており、ありがたいことに多くのお客様から「またお願いしたい」というお声をいただいております。これからも、お客様との信頼関係を第一に、安心して任せていただけるパートナーを目指してまいります。小さなご相談でもお気軽にご連絡ください。
   </p>
   <div class="profile_name profile_name_sp">
     <span class="profile_name_ja">野田 大輔</span>
