--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="telephone=no, email=no">
 
   <title>株式会社サクラ工業 | 電気設備工事における外構工事全般ならお任せ</title>
 
