SEO対応：構造化データとOGPタグを追加

--- a/index.html
+++ b/index.html
@@ -1,23 +1,58 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="format-detection" content="telephone=no, email=no">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="format-detection" content="telephone=no, email=no" />
 
-  <title>株式会社サクラ工業 | 電気設備工事における外構工事全般ならお任せ</title>
+  <title>株式会社サクラ工業｜埼玉県川口市の電気設備・外構工事</title>
+  <meta name="description" content="株式会社サクラ工業は、埼玉県川口市を拠点に、電気設備工事および外構工事全般を行う専門会社です。" />
+  <meta name="keywords" content="電気設備,電気工事,外構工事,埼玉県,川口市,サクラ工業,施工実績" />
+  <meta name="author" content="株式会社サクラ工業" />
 
-  <meta name="description" content="株式会社サクラ工業は、電気設備工事における外構工事全般を専門とする企業です。">
-  <meta name="keywords" content="電気工事,電気設備,電気設備工事,設備,外構,工事,埼玉県,川口市">
-  
-  <link rel="icon" href="favicon.png">
-  <link rel="stylesheet" href="style.css">
+  <!-- OGP (SNS連携対策) -->
+  <meta property="og:title" content="株式会社サクラ工業｜埼玉県川口市の電気設備・外構工事" />
+  <meta property="og:description" content="電気設備工事・外構工事のことなら埼玉県川口市の株式会社サクラ工業へ。" />
+  <meta property="og:image" content="https://www.sakura-kogyo.jp/ogp.jpg" />
+  <meta property="og:url" content="https://www.sakura-kogyo.jp/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="株式会社サクラ工業" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.png" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- JSON-LD 構造化データ（会社情報） -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "株式会社サクラ工業",
+    "url": "https://www.sakura-kogyo.jp",
+    "logo": "https://www.sakura-kogyo.jp/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "JP",
+      "postalCode": "334-0063",
+      "addressRegion": "埼玉県",
+      "addressLocality": "川口市",
+      "streetAddress": "大字東本郷803-25"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+81-48-278-8458",
+      "contactType": "customer service",
+      "areaServed": "JP"
+    }
+  }
+  </script>
 </head>
 
 <body>
 
   <header>
-    <!-- <img src="logo-sp.png" alt="株式会社サクラ工業ロゴ" width="116" height="32"> -->
     <h1>株式会社 サクラ工業</h1>
     <nav>
       <ul class="navigator_list">
@@ -48,7 +83,6 @@
           <th>会社名</th>
           <td>株式会社 サクラ工業</td>
         </tr>
-        <!-- <tr><th>資本金</th><td>#</td></tr> -->
         <tr>
           <th>代表者</th>
           <td>代表取締役 野田 大輔</td>
@@ -57,19 +91,13 @@
           <th>住所</th>
           <td>
             <address>
-              〒334-0063<br>
+              〒334-0063<br/>
               埼玉県川口市大字東本郷803-25
             </address>
           </td>
         </tr>
-        <tr>
-          <th>連絡先</th>
-          <td>048-278-8458</td>
-        </tr>
-        <tr>
-          <th>Email</th>
-          <td>d.noda6669@gmail.com</td>
-        </tr>
+        <tr><th>連絡先</th><td><a href="tel:0482788458">048-278-8458</a></td></tr>
+        <tr><th>Email</th><td><a href="mailto:d.noda6669@gmail.com">d.noda6669@gmail.com</a></td></tr>
         <tr>
           <th>事業内容</th>
           <td>電気設備工事における外構工事全般</td>
@@ -83,8 +111,6 @@
         <p>代表ご挨拶</p>
       </header>
       <div class="message_container">
-        <!-- <div class="profile-pic"></div> -->
-        <!-- <img src="" alt="野田 大輔"> -->
         <p class="message_description">
           ホームページをご覧いただき、ありがとうございます。私たちは「まじめに、ていねいに」を合言葉に、電気設備における外構工事の現場を一つひとつ丁寧に仕上げることを大切にしており、ありがたいことに多くのお客様から「またお願いしたい」というお声をいただいております。これからも、お客様との信頼関係を第一に、安心して任せていただけるパートナーを目指してまいります。小さなご相談でもお気軽にご連絡ください。
         </p>
