--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:description" content="埼玉県川口市のサクラ工業は電気設備工事における外構工事の専門会社。IKEA・イオンモール等の大型商業施設や工場の施工実績多数。迅速対応と確かな技術力でお客様の未来を照らします。">
     <meta property="og:url" content="https://www.sakura-kogyo.jp/">
     <meta property="og:site_name" content="株式会社サクラ工業">
-    <meta property="og:image" content="https://www.sakura-kogyo.jp/images/ogp.jpg">
+    <meta property="og:image" content="https://www.sakura-kogyo.jp/assets/images/ogp.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="株式会社サクラ工業 - 電気設備工事における外構工事のプロフェッショナル">
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="株式会社サクラ工業｜川口市の電気設備工事における外構工事【IKEA・イオン施工実績あり】">
     <meta name="twitter:description" content="埼玉県川口市のサクラ工業は電気設備工事における外構工事の専門会社。IKEA・イオンモール等の大型商業施設や工場の施工実績多数。">
-    <meta name="twitter:image" content="https://www.sakura-kogyo.jp/images/ogp.jpg">
+    <meta name="twitter:image" content="https://www.sakura-kogyo.jp/assets/images/ogp.jpg">
     
     <!-- Geo Tags for Local SEO -->
     <meta name="geo.region" content="JP-11">
@@ -90,7 +90,7 @@
         ],
         "serviceType": ["電気設備工事における外構工事", "電気設備工事", "外構工事", "電気配線工事", "商業施設電気工事", "工場電気設備"],
         "slogan": "人々に光を - Light to the People",
-        "knowsAbout": ["電気設備工事における外構工事" "電気設備", "外構工事", "商業施設", "工場設備", "照明設計"],
+        "knowsAbout": ["電気設備工事における外構工事", "電気設備", "外構工事", "商業施設", "工場設備", "照明設計"],
         "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "電気設備工事における外構工事サービス",
@@ -110,8 +110,8 @@
             "name": "野田 大輔",
             "jobTitle": "代表取締役"
         },
-        "image": "https://www.sakura-kogyo.jp/images/ogp.jpg",
-        "logo": "https://www.sakura-kogyo.jp/images/logo.png",
+        "image": "https://www.sakura-kogyo.jp/assets/images/ogp.jpg",
+        "logo": "https://www.sakura-kogyo.jp/assets/images/favicon/web-app-manifest-512x512.png",
         "sameAs": [],
         "openingHoursSpecification": {
             "@type": "OpeningHoursSpecification",
